@@ -19,6 +19,10 @@
      the next key will expire when scanning for expired keys.  Set the select
      timeout to whichever of these two things happens next.  With djm@, with &
      ok deraadt@ markus@
+   - tedu@cvs.openbsd.org 2007/03/20 03:56:12
+     [readconf.c clientloop.c]
+     remove some bogus *p tests from charles longeau
+     ok deraadt millert
 
 20070313
  - (dtucker) [entropy.c scard-opensc.c ssh-rand-helper.c] Bug #1294: include
@@ -2848,4 +2852,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4643 2007/03/21 09:45:06 dtucker Exp $
+$Id: ChangeLog,v 1.4644 2007/03/21 09:46:03 dtucker Exp $
